Rewrite register.ejs to experiment more HTML attributes.

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -24,12 +24,12 @@
         <tr>
           <th>帳號：</th>
           <td>
-            <input type="text" name="theAccount" id="theAccount" maxlength="12" required value="<%= theAccount %>"
-              <% if (postback) __append('readonly') %>>
+            <input type="text" name="theAccount" id="theAccount" maxlength="12" required autofocus
+              value="<%= theAccount %>" <% if (postback) __append('readonly') %>>
           </td>
           <th>姓名：</th>
-          <td><input name="userName" type="text" id="userName" maxlength="50" required value="<%= userName %>"
-              <% if (postback) __append('readonly') %>></td>
+          <td><input name="userName" type="text" id="userName" maxlength="50" required autocomplete="off"
+              value="<%= userName %>" <% if (postback) __append('readonly') %>></td>
         </tr>
         <tr>
           <th>密碼：</th>
@@ -69,6 +69,16 @@
           <td colspan="4" style="text-align:center"><input type="submit" value="提交">
             <input type="reset" value="清除"></td>
         </tr>
+        <% } else {%>
+        <tr>
+          <td colspan="4" style="text-align:center">
+            <!-- The following submit button should work if the browser fully support HTML5:
+            <input type="submit" value="回首頁" formaction="/" formmethod="get" formtarget="_top">
+            -->
+            <!-- JavaScript always works. -->
+            <input type="button" value="回首頁" onclick="goHome()">
+          </td>
+        </tr>
         <% } %>
       </table>
     </form>
@@ -77,7 +87,9 @@
 <script>
   document.getElementById('thePassword').onchange = validatePassword;
   document.getElementById('confirmPassword').onkeyup = confirmPassword;
+  /*
   document.getElementById('theAccount').focus();
+  */
 </script>
 
 </html>
