--- a/views/register.ejs
+++ b/views/register.ejs
@@ -34,7 +34,7 @@
         <tr>
           <th>密碼：</th>
           <td><input type="password" title="密碼至少8個字元，須包含大小寫英文字母以及數字。" name="thePassword" id="thePassword" required
-              required value="<%= thePassword %>" <% if (postback) __append('readonly') %>></td>
+              value="<%= thePassword %>" <% if (postback) __append('readonly') %>></td>
           <th>再次輸入密碼：</th>
           <td><input type="password" name="confirmPassword" id="confirmPassword" required value="<%= confirmPassword %>"
               <% if (postback) __append('readonly') %>></td>
